--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,6 @@ jobs:
       WINEDEBUG: fixme-all
       WINEPREFIX: /tmp/wineprefix/
       SDK_URL: https://depends.dogecoincore.org
-      BIONIC_LIEF_WHL: lief-0.12.3-cp36-cp36m-linux_x86_64.whl
 
     strategy:
       fail-fast: false
@@ -228,14 +227,7 @@ jobs:
                procps bison python3 python3-pip python3-setuptools python3-wheel
           apt-get install -y ${{ matrix.packages }}
           python3 -m pip install setuptools==70.3.0 --upgrade
-
-      - name: Install custom lief wheel
-        if: matrix.os == 'ubuntu-18.04'
-        run: python3 -m pip install $SDK_URL/$BIONIC_LIEF_WHL
-
-      - name: Install standard lief wheel
-        if: matrix.os != 'ubuntu-18.04'
-        run: python3 -m pip install lief
+          python3 -m pip install lief
 
       - name: Post install
         if: ${{ matrix.postinstall }}
