--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -1,3 +1,77 @@
-git add .github/workflows/build-wallets.yml
-git commit -m "CI: auto-build wallets on tag"
-git push
+# .github/workflows/build-wallets.yml
+name: Build BrrrFren Wallets
+
+permissions:            # ← lets a private repo upload release assets
+  contents: write
+
+on:
+  push:
+    tags: [ 'v*' ]      # runs only when you push a tag starting with v
+
+jobs:
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      # ---------- install deps per OS ----------
+      - name: Install build deps (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential libtool autotools-dev automake pkg-config \
+            libevent-dev libssl-dev libboost-all-dev \
+            qtbase5-dev qttools5-dev-tools protobuf-compiler
+
+      - name: Install build deps (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew update
+          brew install autoconf automake libtool boost berkeley-db@5 qt
+
+      - name: Install build deps (Windows)
+        if: runner.os == 'Windows'
+        uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            git
+            base-devel
+            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-qt5
+            mingw-w64-x86_64-boost
+            mingw-w64-x86_64-protobuf
+
+      # ---------- build ----------
+      - name: Build BrrrFren
+        shell: bash
+        run: |
+          ./autogen.sh
+          ./configure --with-gui
+          make -j$(nproc)
+
+      # ---------- package ----------
+      - name: Package binaries
+        shell: bash
+        run: |
+          VER=${GITHUB_REF#refs/tags/}
+          case $RUNNER_OS in
+            Linux)   tar -czvf brrrfren-${VER}-linux.tar.gz  src/qt/dogecoin-qt ;;
+            macOS)   ditto -c -k --keepParent src/qt/Dogecoin-Qt.app \
+                     brrrfren-${VER}-mac.dmg ;;
+            Windows) 7z a brrrfren-${VER}-win.zip src/qt/*.exe ;;
+          esac
+
+      # ---------- upload ----------
+      - name: Upload binaries to release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            *.tar.gz
+            *.zip
+            *.dmg
