--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -280,12 +280,17 @@ jobs:
       run: |
         if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
           sha256sum brrrfren-linux-x64.tar.gz > brrrfren-linux-x64.tar.gz.sha256
+          echo "Checksum for brrrfren-linux-x64.tar.gz:"
+          cat brrrfren-linux-x64.tar.gz.sha256
         else
           sha256sum brrrfren-windows-x64.zip > brrrfren-windows-x64.zip.sha256
+          echo "Checksum for brrrfren-windows-x64.zip:"
+          cat brrrfren-windows-x64.zip.sha256
         fi
       shell: bash
 
     - name: Upload binaries to release
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: |
